--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,14 @@ h2 {
 
 figure {
   line-height: 0;
+  aspect-ratio: 4/3;
 }
 
 img {
   width: 100%;
   border-radius: 5px;
+  object-fit: cover; 
+  height: 100%;
 }
 
 a {
@@ -58,6 +61,19 @@ iframe {
 p {
   margin-bottom: 0.5rem;
   text-align: justify;
+}
+
+input, select, textarea, button {
+  font-family: inherit;
+  font-size: 0.9rem;
+}
+
+input, select {
+  width: 100%;
+  height: 2.5rem;
+  padding: 0 0.5rem;
+  border-radius: 5px;
+  border: none;
 }
 
 body > header {
@@ -96,19 +112,19 @@ nav {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   box-shadow: 0 2px 4px var(--secondary-color);
-  scale: 0;
+  /* scale: 0;
   transform-origin: top right;
   transition: scale 0.3s ease-in-out, display 0.3s;
-  transition-behavior: allow-discrete;
+  transition-behavior: allow-discrete; */
 }
 
 .nav-open {
   display: block;
-  scale: 1;
+  /* scale: 1;
 
   @starting-style {
     scale: 0;
-  }
+  } */
 }
 
 nav a {
@@ -146,13 +162,43 @@ footer p {
 .button {
   background-color: var(--primary-color);
   color: var(--white);
-  padding: 0.65rem 1rem;
-  border-radius: 5px;
+  display: inline-block;
+  padding: 0.5rem 1.25rem;
+  margin: 0.2rem;
+  border-radius: 0.5rem;
   transition: background-color 0.3s ease;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
 }
 
 .button:hover {
   background-color: var(--secondary-color);
+}
+
+.btn-success {
+  background-color: #2ecc71;
+}
+
+.btn-success:hover {
+  background-color: #27ae60;
+}
+
+.btn-danger {
+  background-color: #e74c3c;
+}
+
+.btn-danger:hover {
+  background-color: #c0392b;
+}
+
+.btn-cancel {
+  background-color: #ccc;
+  color: #333;
+}
+
+.btn-cancel:hover {
+  background-color: #bbb;
 }
 
 .visually-hidden {
@@ -166,78 +212,15 @@ footer p {
   transition: none;
 }
 
-/* HOME */
-
-.main-section {
-  background-color: var(--main-section);
+.display-none {
+  display: none;
 }
 
-.popular-recipes article {
-  border-bottom: 1px solid var(--main-section);
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-}
-
-.popular-recipes article:last-child {
-  border-bottom: none;
-  margin-bottom: 0;
-}
-
-.recipe-info {
-  padding-bottom: 1rem;
-}
-
-/* CATALOGO */
-
-.filters select {
-  width: 100%;
-  padding: 0.65rem 0.5rem;
-  margin: 0.65rem 0;
-  border-radius: 5px;
-  border: none;
-}
-
-.catalog-grid {
-  padding-top: 1rem;
-}
-
-.card {
-  padding: 0.65rem;
-  margin-bottom: 0.75rem;
-  border-radius: 10px;
-  background-color: var(--white);
-  color: var(--grey);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-}
-
-.card h2 {
-  color: var(--black);
-  margin-bottom: 0;
-  font-size: 1.35rem;
-}
-
-.card-data {
-  display: flex;
-  justify-content: space-around;
-}
-
-/* RECETA */
-
-.recipe-presentation figure {
-  margin-bottom: 0.5rem;
-}
-
-.recipe-section ul {
-  margin-left: 1rem;
-}
-
-.recipe-data {
-  display: flex;
-  gap: 2rem;
-}
-
-.recipe-section iframe {
-  max-height: 250px;
+/* GRILLAS Y FORMULARIOS */
+.recipe-catalog, .filters, #data-form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.8rem;
 }
 
 
@@ -265,169 +248,32 @@ footer p {
     padding: 0.5rem;
   }
 
-  /* HOME */
-
-  .main-section {
-    height: 350px;
-    align-content: center;
-    color: var(--white);
-    background: linear-gradient(rgb(0 0 0  / .5), rgb(0 0 0  / .5)), url("../img/imagen_home_1200_800.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-  }
-
-  .main-section figure {
-    display: none;
-  }
-
-  .main-section p {
-    margin: auto;
-    text-align: center;
-    width: 70%;
-    margin-top: 0.75rem;
-    font-weight: bold;
-  }
-
-  .popular-recipes article {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    padding: 1rem 0;
-    margin: 0;
-  }
-
-  .recipe-info {
-    width: 50%;
-    align-content: center;
-    padding-right: 1.5rem;
-    padding-left: 2rem;
-  }
-
-  .recipe-info>p {
-    margin-bottom: 0.75rem;
-  }
-
-  .popular-recipes figure {
-    flex: 1;
-  }
-
-  /* CATALOGO */
-
-  .catalog-grid, .filters {
-    display: grid;
+  /* GRILLAS Y FORMULARIOS */
+  .recipe-catalog, .filters, #data-form {
     grid-template-columns: 1fr 1fr;
-    gap: 0.75rem;
-  }
-
-  .filters {
-    gap: 0 0.75rem;
-  }
-
-  .card {
-    margin: 0;
-  }
-
-  /* RECETA */
-  .recipe {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .recipe-presentation figure {
-    float: right;
-    width: 50%;
-    margin-bottom: 0;
-    margin-left: 1rem;
-  }
-
-  .recipe-section {
-    clear: both;
-  }
-
-  .recipe-section iframe {
-    max-width: 80%;
-    max-height: 350px;
   }
 
 }
 
+
 @media screen and (min-width: 768px) {
-  /* HOME */
+  /* GRILLAS Y FORMULARIOS */
 
-  .recipe-info {
-    width: 70%;
-  }
-
-  .recipe-info>p {
-    margin-bottom: 2rem;
-  }
-
-  /* CATALOGO */
-
-  .catalog-grid {
+  .recipe-catalog {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0.85rem;
-  }
-
-  /* RECETA */
-  .recipe {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .recipe-presentation figure {
-    width: 40%;
-  }
-
-  .recipe-section iframe {
-    max-width: 70%;
   }
 
 }
 
 
 @media screen and (min-width: 992px) {
-  /* CATALOGO */
+  /* GRILLAS Y FORMULARIOS */
 
-  .catalog-grid, .filters {
-    display: grid;
+  .recipe-catalog, .filters {
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
   }
 
-  /* RECETA */
-
-  .recipe-presentation figure {
-    float: none;
-    width: 35%;
-    margin-left: 5%;
-  }
-
-  .recipe-presentation {
-    display: flex;
-    flex-direction: row-reverse;
-  }
-
-  .recipe-presentation>div {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-  .recipe-section iframe {
-    max-width: 50%;
-    max-height: none;
-  }
-
-}
-
-@media screen and (min-width: 1200px) {
-  /* RECETA */
-  .recipe {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
 }
